# CSV-analyst-Rag-System

./: README.md  pyproject.toml
backend/: main.py  rag.py  test_script.py
frontend/: app_ui.py
