[project]
name = "csv-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "google>=3.0.0",
    "google-genai>=1.70.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-multipart>=0.0.22",
    "requests>=2.33.1",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
]
